objects/ssot__DocumentChecklistItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CommentsText__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DocumentCategoryLabelText__c</fullName>
        <label>Document Category Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DocumentChecklistItemStatus__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DocumentTypeLabelText__c</fullName>
        <label>Document Type Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FileOwnerId__c</fullName>
        <label>File Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FileOwnerObject__c</fullName>
        <label>File Owner Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Document Checklist Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InstructionsText__c</fullName>
        <label>Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsFrozen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Frozen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentRecordId__c</fullName>
        <label>Parent Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentRecordObject__c</fullName>
        <label>Parent Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReceivedDocumentId__c</fullName>
        <label>Received Document</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TransformationInfoText__c</fullName>
        <label>Transformation Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UploadedById__c</fullName>
        <label>Uploaded By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ValidatedBy__c</fullName>
        <label>Validated By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ValidationDateTime__c</fullName>
        <label>Validation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1741334703667_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocumentChecklistItem_AccountId_map__rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>DocumentChecklistItem_AccountId_map__rel</relationshipLabel>
        <relationshipName>rel_1741334703667_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1741334707811_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocumentChecklistItem_FileOwnerId_ma_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>DocumentChecklistItem_FileOwnerId_ma_rel</relationshipLabel>
        <relationshipName>rel_1741334707811_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1741334710580_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocumentChecklistItem_FileOwnerId_ma_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>DocumentChecklistItem_FileOwnerId_ma_rel</relationshipLabel>
        <relationshipName>rel_1741334710580_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>